// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a Tab 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tab tab normal disabled nohover"
    style={
      Object {
        "minWidth": "75px",
        "width": "",
      }
    }
  >
    <Title
      className=""
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      href={
        Object {
          "selectHandler": [Function],
        }
      }
      id=""
      layout={5}
      location="none"
      noedit={true}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      onClose={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      title="tab title"
      visible={true}
      widget={false}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Title__TitleView
          className="ui-title-bar"
          layout={5}
          style={Object {}}
        >
          <div
            className="ui-title-bar Title__TitleView-ddYmk gnejTR"
            style={Object {}}
          >
            <Title__StyledWidget
              className="ui-title"
              contentEditable={false}
              direction="right"
              disabled={true}
              focus={false}
              height=""
              href={
                Object {
                  "selectHandler": [Function],
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="tab title"
              title="tab title"
              visible={true}
              widget={false}
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 5;
",
                ]
              }
            >
              <Label
                className="ui-title Title__StyledWidget-dupbKD jEnzdX"
                contentEditable={false}
                direction="right"
                disabled={true}
                focus={false}
                height=""
                href={
                  Object {
                    "selectHandler": [Function],
                  }
                }
                id=""
                layout={5}
                location="none"
                noedit={true}
                nohover={false}
                noripple={true}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onClose={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="tab title"
                title="tab title"
                useedit={false}
                visible={true}
                widget={false}
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 5;
",
                  ]
                }
              >
                <span
                  className="ui-label label normal ui-title Title__StyledWidget-dupbKD jEnzdX disabled nohover"
                  contentEditable={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  tab title
                </span>
              </Label>
            </Title__StyledWidget>
            <Title__StyledWidget
              className="ui-title-widget"
              contentEditable={false}
              direction="right"
              disabled={true}
              focus={false}
              height=""
              href={
                Object {
                  "selectHandler": [Function],
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              title="tab title"
              visible={true}
              widget={false}
              width=""
              xcss={
                Array [
                  "
	text-align: right;
	flex: 1;
",
                ]
              }
            >
              <div
                className="ui-title-widget Title__StyledWidget-ieYmOL upBhX"
                contentEditable={false}
                direction="right"
                disabled={true}
                height=""
                href={
                  Object {
                    "selectHandler": [Function],
                  }
                }
                id=""
                onClick={[Function]}
                selected={false}
                style={Object {}}
                title="tab title"
                width=""
              />
            </Title__StyledWidget>
          </div>
        </Title__TitleView>
      </ThemeProvider>
    </Title>
  </div>
</Tab>
`;

exports[`Test making a Tab invisible 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  href={
    Object {
      "orientation": "top",
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={false}
  width=""
  xcss={null}
>
  <div
    className="ui-tab tab tabBorderTop normal invisible"
    style={
      Object {
        "minWidth": "75px",
        "width": "",
      }
    }
  >
    <Title
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      href={
        Object {
          "orientation": "top",
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      location="none"
      noedit={true}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      onClose={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      title="tab title"
      visible={true}
      widget={
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          href={
            Object {
              "orientation": "top",
              "selectHandler": [Function],
              "sizing": "normal",
            }
          }
          iconName="times"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          onClose={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          title="tab title"
          visible={false}
          width=""
          xcss={null}
        >
          Test content
        </Button>
      }
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Title__TitleView
          className="ui-title-bar"
          layout={5}
          style={Object {}}
        >
          <div
            className="ui-title-bar Title__TitleView-ddYmk gnejTR"
            style={Object {}}
          >
            <Title__StyledWidget
              className="ui-title"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "orientation": "top",
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="tab title"
              title="tab title"
              visible={true}
              widget={
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "orientation": "top",
                      "selectHandler": [Function],
                      "sizing": "normal",
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={false}
                  width=""
                  xcss={null}
                >
                  Test content
                </Button>
              }
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 5;
",
                ]
              }
            >
              <Label
                className="ui-title Title__StyledWidget-dupbKD jEnzdX"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                href={
                  Object {
                    "orientation": "top",
                    "selectHandler": [Function],
                    "sizing": "normal",
                  }
                }
                id=""
                layout={5}
                location="none"
                noedit={true}
                nohover={false}
                noripple={true}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onClose={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="tab title"
                title="tab title"
                useedit={false}
                visible={true}
                widget={
                  <Button
                    className=""
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    focus={false}
                    height=""
                    href={
                      Object {
                        "orientation": "top",
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    iconName="times"
                    iconStyle=""
                    id=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    onClick={[Function]}
                    onClose={[Function]}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    title="tab title"
                    visible={false}
                    width=""
                    xcss={null}
                  >
                    Test content
                  </Button>
                }
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 5;
",
                  ]
                }
              >
                <span
                  className="ui-label label normal ui-title Title__StyledWidget-dupbKD jEnzdX"
                  contentEditable={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  tab title
                </span>
              </Label>
            </Title__StyledWidget>
            <Title__StyledWidget
              className="ui-title-widget"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "orientation": "top",
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              title="tab title"
              visible={true}
              widget={
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "orientation": "top",
                      "selectHandler": [Function],
                      "sizing": "normal",
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={false}
                  width=""
                  xcss={null}
                >
                  Test content
                </Button>
              }
              width=""
              xcss={
                Array [
                  "
	text-align: right;
	flex: 1;
",
                ]
              }
            >
              <div
                className="ui-title-widget Title__StyledWidget-ieYmOL upBhX"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                href={
                  Object {
                    "orientation": "top",
                    "selectHandler": [Function],
                    "sizing": "normal",
                  }
                }
                id=""
                onClick={[Function]}
                selected={false}
                style={Object {}}
                title="tab title"
                width=""
              >
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "orientation": "top",
                      "selectHandler": [Function],
                      "sizing": "normal",
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={false}
                  width=""
                  xcss={null}
                >
                  <div
                    className="ui-button button ripple normal invisible"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <Icon
                      className="icon"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="times"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Icon__FontAwesome
                        className="ui-icon fa fa-fw fa-times icon"
                        sizing="normal"
                        style={Object {}}
                      >
                        <i
                          className="ui-icon fa fa-fw fa-times icon Icon__FontAwesome-kBRBjz jFGZDN"
                          style={Object {}}
                        />
                      </Icon__FontAwesome>
                    </Icon>
                  </div>
                </Button>
              </div>
            </Title__StyledWidget>
          </div>
        </Title__TitleView>
      </ThemeProvider>
    </Title>
  </div>
</Tab>
`;

exports[`Test retrieval of Tab props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "href": Object {
    "orientation": "top",
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "onClose": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "title": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the click handler in the Tab instance 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tab tab normal"
    style={
      Object {
        "minWidth": "75px",
        "width": "",
      }
    }
  >
    <Title
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      href={
        Object {
          "selectHandler": [Function],
        }
      }
      id=""
      layout={5}
      location="none"
      noedit={true}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      onClose={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      title="tab title"
      visible={true}
      widget={
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          href={
            Object {
              "selectHandler": [Function],
            }
          }
          iconName="times"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          onClose={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          title="tab title"
          visible={true}
          width=""
          xcss={null}
        >
          Test content
        </Button>
      }
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Title__TitleView
          className="ui-title-bar"
          layout={5}
          style={Object {}}
        >
          <div
            className="ui-title-bar Title__TitleView-ddYmk gnejTR"
            style={Object {}}
          >
            <Title__StyledWidget
              className="ui-title"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "selectHandler": [Function],
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="tab title"
              title="tab title"
              visible={true}
              widget={
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={true}
                  width=""
                  xcss={null}
                >
                  Test content
                </Button>
              }
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 5;
",
                ]
              }
            >
              <Label
                className="ui-title Title__StyledWidget-dupbKD jEnzdX"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                href={
                  Object {
                    "selectHandler": [Function],
                  }
                }
                id=""
                layout={5}
                location="none"
                noedit={true}
                nohover={false}
                noripple={true}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onClose={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="tab title"
                title="tab title"
                useedit={false}
                visible={true}
                widget={
                  <Button
                    className=""
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    focus={false}
                    height=""
                    href={
                      Object {
                        "selectHandler": [Function],
                      }
                    }
                    iconName="times"
                    iconStyle=""
                    id=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    onClick={[Function]}
                    onClose={[Function]}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    title="tab title"
                    visible={true}
                    width=""
                    xcss={null}
                  >
                    Test content
                  </Button>
                }
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 5;
",
                  ]
                }
              >
                <span
                  className="ui-label label normal ui-title Title__StyledWidget-dupbKD jEnzdX"
                  contentEditable={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  tab title
                </span>
              </Label>
            </Title__StyledWidget>
            <Title__StyledWidget
              className="ui-title-widget"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "selectHandler": [Function],
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              title="tab title"
              visible={true}
              widget={
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={true}
                  width=""
                  xcss={null}
                >
                  Test content
                </Button>
              }
              width=""
              xcss={
                Array [
                  "
	text-align: right;
	flex: 1;
",
                ]
              }
            >
              <div
                className="ui-title-widget Title__StyledWidget-ieYmOL upBhX"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                href={
                  Object {
                    "selectHandler": [Function],
                  }
                }
                id=""
                onClick={[Function]}
                selected={false}
                style={Object {}}
                title="tab title"
                width=""
              >
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "selectHandler": [Function],
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <div
                    className="ui-button button ripple normal"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <Icon
                      className="icon"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="times"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Icon__FontAwesome
                        className="ui-icon fa fa-fw fa-times icon"
                        sizing="normal"
                        style={Object {}}
                      >
                        <i
                          className="ui-icon fa fa-fw fa-times icon Icon__FontAwesome-kBRBjz jFGZDN"
                          style={Object {}}
                        />
                      </Icon__FontAwesome>
                    </Icon>
                  </div>
                </Button>
              </div>
            </Title__StyledWidget>
          </div>
        </Title__TitleView>
      </ThemeProvider>
    </Title>
  </div>
</Tab>
`;

exports[`Test the close click handler on a Tab instance 1`] = `
<Tab
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  href={
    Object {
      "hiddenTabHandler": [Function],
    }
  }
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  onClose={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-tab tab normal"
    style={
      Object {
        "minWidth": "75px",
        "width": "",
      }
    }
  >
    <Title
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      href={
        Object {
          "hiddenTabHandler": [Function],
        }
      }
      id=""
      layout={5}
      location="none"
      noedit={true}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      onClose={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      title="tab title"
      visible={true}
      widget={
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          href={
            Object {
              "hiddenTabHandler": [Function],
            }
          }
          iconName="times"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          onClose={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          title="tab title"
          visible={true}
          width=""
          xcss={null}
        >
          Test content
        </Button>
      }
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <Title__TitleView
          className="ui-title-bar"
          layout={5}
          style={Object {}}
        >
          <div
            className="ui-title-bar Title__TitleView-ddYmk gnejTR"
            style={Object {}}
          >
            <Title__StyledWidget
              className="ui-title"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "hiddenTabHandler": [Function],
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="tab title"
              title="tab title"
              visible={true}
              widget={
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "hiddenTabHandler": [Function],
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={true}
                  width=""
                  xcss={null}
                >
                  Test content
                </Button>
              }
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 5;
",
                ]
              }
            >
              <Label
                className="ui-title Title__StyledWidget-dupbKD jEnzdX"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                href={
                  Object {
                    "hiddenTabHandler": [Function],
                  }
                }
                id=""
                layout={5}
                location="none"
                noedit={true}
                nohover={false}
                noripple={true}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onClose={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="tab title"
                title="tab title"
                useedit={false}
                visible={true}
                widget={
                  <Button
                    className=""
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    focus={false}
                    height=""
                    href={
                      Object {
                        "hiddenTabHandler": [Function],
                      }
                    }
                    iconName="times"
                    iconStyle=""
                    id=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    onClick={[Function]}
                    onClose={[Function]}
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    title="tab title"
                    visible={true}
                    width=""
                    xcss={null}
                  >
                    Test content
                  </Button>
                }
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 5;
",
                  ]
                }
              >
                <span
                  className="ui-label label normal ui-title Title__StyledWidget-dupbKD jEnzdX"
                  contentEditable={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  tab title
                </span>
              </Label>
            </Title__StyledWidget>
            <Title__StyledWidget
              className="ui-title-widget"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              href={
                Object {
                  "hiddenTabHandler": [Function],
                }
              }
              id=""
              layout={5}
              location="none"
              noedit={true}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              onClose={[Function]}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              title="tab title"
              visible={true}
              widget={
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "hiddenTabHandler": [Function],
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={true}
                  width=""
                  xcss={null}
                >
                  Test content
                </Button>
              }
              width=""
              xcss={
                Array [
                  "
	text-align: right;
	flex: 1;
",
                ]
              }
            >
              <div
                className="ui-title-widget Title__StyledWidget-ieYmOL upBhX"
                contentEditable={false}
                direction="right"
                disabled={false}
                height=""
                href={
                  Object {
                    "hiddenTabHandler": [Function],
                  }
                }
                id=""
                onClick={[Function]}
                selected={false}
                style={Object {}}
                title="tab title"
                width=""
              >
                <Button
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  href={
                    Object {
                      "hiddenTabHandler": [Function],
                    }
                  }
                  iconName="times"
                  iconStyle=""
                  id=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  onClick={[Function]}
                  onClose={[Function]}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  title="tab title"
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <div
                    className="ui-button button ripple normal"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <Icon
                      className="icon"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="times"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <Icon__FontAwesome
                        className="ui-icon fa fa-fw fa-times icon"
                        sizing="normal"
                        style={Object {}}
                      >
                        <i
                          className="ui-icon fa fa-fw fa-times icon Icon__FontAwesome-kBRBjz jFGZDN"
                          style={Object {}}
                        />
                      </Icon__FontAwesome>
                    </Icon>
                  </div>
                </Button>
              </div>
            </Title__StyledWidget>
          </div>
        </Title__TitleView>
      </ThemeProvider>
    </Title>
  </div>
</Tab>
`;

exports[`Test the creation of a Tab instance 1`] = `
<div
  className="ui-tab tab ui-selected tabBorderTop normal"
  style={
    Object {
      "minWidth": "75px",
      "width": "",
    }
  }
>
  <Title
    className=""
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    href={
      Object {
        "orientation": "top",
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    location="none"
    noedit={true}
    nohover={false}
    noripple={true}
    onClick={[Function]}
    onClose={[Function]}
    selected={true}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="tab title"
    visible={true}
    widget={
      <Button
        className=""
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        href={
          Object {
            "orientation": "top",
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        iconName="times"
        iconStyle=""
        id=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        onClose={[Function]}
        selected={true}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="tab title"
        visible={true}
        width=""
        xcss={null}
      >
        Test content
      </Button>
    }
    width=""
    xcss={null}
  >
    Test content
  </Title>
</div>
`;
